fix heart effect layout bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,6 +234,7 @@ main {
   transition-delay: 0 150ms;
   position: absolute;
   background-color: white;
+  font-size: 1.33em;
 }
 .heart_icon:hover {
   opacity: 0;
@@ -244,6 +245,7 @@ main {
 .heart_icon_filled {
   color: #9356dc;
   opacity: 1;
+  font-size: 1.33em;
 }
 
 .footer {
