--- a/sass/components/_heart-icon.sass
+++ b/sass/components/_heart-icon.sass
@@ -4,6 +4,7 @@
     transition-delay: 0 150ms
     position: absolute
     background-color: white
+    font-size: 1.33em
     &:hover
         opacity: 0
     &:hover + .heart_icon_filled
@@ -11,3 +12,4 @@
     &_filled
         color: $color_primary
         opacity: 1
+        font-size: 1.33em
