--- a/sass/pages/menus.sass
+++ b/sass/pages/menus.sass
@@ -188,6 +188,8 @@ button
             font-size: 0.9rem
     .check
         width: 25px
+    .content_header_text
+        font-size: 0.8rem
 
 @media screen and ( max-width: 360px )
     .content_menu_card
